app/styles/pages/_project-proposal.scss
.project {
  .rules, .project-proposal {
    display: inline-block;
    vertical-align: top;
  }

  .rules {
    padding: 20px;
    width: 300px;
    li {
      line-height: 1.4em;
      margin-bottom: 10px;
      strong {
        display: block;
        margin-bottom: 5px;
      }
    }
    @include media-max-width($large) {
      margin-left: 10%;
      width: 50%;
    }
  }
  .project-proposal {
    margin-left: 10%;
    margin-right: 100px;
    padding: 20px 10px;
    width: 50%;
    .word a {
      @include underline;
      color: $text-color;
      text-decoration: none;
    }
    .flag, .negative {
      display: inline-block;
      margin-right: 10px;
    }
  }
  .rules, .project-proposal {
    @include media-max-width($medium) {
      margin-left: 0px;
      width: 95%;
    }
  }
  .meaning {
    padding: 20px 0px;
    .def {
      margin-bottom: 10px;
    }
  }
}

